OLTU-154 Fix logging config and add error logging in client-demo Thanks for the patch Marko Asplund
git-svn-id: https://svn.apache.org/repos/asf/oltu/trunk@1732766 13f79535-47bb-0310-9956-ffa450edef68